# models/draw.go
@@ -4,16 +4,15 @@ import (
 	"draw/lib"
 	"errors"
 	"fmt"
+	"github.com/astaxie/beego/orm"
 	"reflect"
 	"strings"
-
-	"github.com/astaxie/beego/orm"
 )
 
 type Draw struct {
 	Id         int64 `json:"id,omitempty" orm:"auto"`
 	Aid        int `json:"aid,omitempty"`
-	Uin        int `json:"uin,omitempty"`
+	Uin        int `json:"uin"`
 	Title      string `json:"title,omitempty" orm:"size(128)"`
 	Type       int `json:"type,omitempty"`
 	Times      int `json:"times,omitempty"`
@@ -34,6 +33,14 @@ type Draw struct {
 	JoinNum    int `json:"joinNum,omitempty" orm:"column(joinNum)"`
 	IsDeleted  int `json:"-" orm:"column(isDeleted)"`
 	ShowRate   int `json:"showRate,omitempty" orm:"column(showRate)"`
+	PrizeConfigs  []*DrawPrize `json:"prizeConfigs,omitempty" orm:"-"`
+	PlayConfigs   []*DrawPlay `json:"playConfigs,omitempty" orm:"-"`
+	PreviewUrl string `json:"previewUrl" orm:"-"`
+}
+
+type DrawInfo struct {
+	*Draw
+	PlayConfigs   []*DrawPlay `json:"playConfigs"`
 }
 
 func (d *Draw) TableName() string {
@@ -50,15 +57,69 @@ func AddDraw(m *Draw, prize []DrawPrize, play []DrawPlay) (id int64, err error) 
 	if err != nil {
 		o.Rollback()
 	}
-	_, err = AddDrawPrize(prize, id)
+	for k, _ := range prize {
+		prize[k].DrawId = id
+		prize[k].CreateTime = lib.GetCurrentTimeStamp()
+		prize[k].UpdateTime = lib.GetCurrentTimeStamp()
+	}
+
+	length := len(prize)
+	_, err = o.InsertMulti(length, prize)
 	if err != nil {
 		o.Rollback()
 	}
-	_, err = AddDrawPlay(play, id)
+	for k, _ := range play {
+		play[k].DrawId = id
+		play[k].Play = k + 1
+	}
+	length = len(play)
+	_, err = o.InsertMulti(length, play)
 	if err != nil {
 		o.Rollback()
 	}
 	o.Commit()
+	return
+}
+
+func UpdateDraw(m *Draw, prize []DrawPrize, play []DrawPlay) (err error) {
+	o := orm.NewOrm()
+	o.Using("default")
+	//o.Begin()
+	v := Draw{Id: m.Id}
+	if err = o.Read(&v); err == nil {
+		var num int64
+		if num, err = o.Update(&m); err == nil {
+			fmt.Println("Number of records deleted in database:", num)
+		}
+	}
+	//o.QueryTable(new(Draw)).Filter("id",m.Id).Update("")
+	//if err != nil {
+	//	o.Rollback()
+	//	return
+	//}
+	//currentTime := lib.GetCurrentTimeStamp()
+	//for _, v := range prize {
+	//	if v.Id == 0 { //新增
+	//		v.DrawId = m.Id
+	//		v.CreateTime = currentTime
+	//		v.UpdateTime = currentTime
+	//		o.Insert(&v)
+	//	}else{  //更新
+	//		o.ReadForUpdate(&v)
+	//	}
+	//}
+	//
+	//for k, v := range play {
+	//	fmt.Println("v---",v.Id)
+	//	if v.Id == 0 { //新增
+	//		v.DrawId = m.Id
+	//		v.Play = k + 1
+	//		o.Insert(&v)
+	//	}else{  //更新
+	//		o.ReadForUpdate(&v)
+	//	}
+	//}
+	//o.Commit()
 	return
 }
 
@@ -179,11 +240,111 @@ func countDraw()  {
 func UpdateDrawById(m *Draw) ( err error){
 	o := orm.NewOrm()
 	v := Draw{Id: m.Id}
-	// ascertain id exists in the database
+	//ascertain id exists in the database
 	if err := o.ReadForUpdate(&v,"title"); err != nil {
 		return err
 	}
+
+	//o.QueryTable(new(Draw)).Filter("id", m.Id).Update()
+
 	return nil
+}
+
+func (m *Draw) Update() (err error) {
+	localTime := lib.GetCurrentTimeStamp()
+	o := orm.NewOrm()
+	o.Using("default")
+	o.Begin()
+	err = o.Read(&Draw{Id:m.Id})
+	if err != nil {
+		return
+	}
+	m.UpdateTime = localTime
+	_, err = o.Update(m)
+	if err != nil {
+		o.Rollback()
+		return
+	}
+
+	prize := m.PrizeConfigs
+	for _, v := range prize {
+		v.UpdateTime = localTime
+		if v.Id == 0 { //新增
+			v.DrawId = m.Id
+			v.CreateTime = localTime
+			_, err = o.Insert(v)
+		}else {  //修改
+			_, err = o.Update(v,"prizeAlias","level","name","sum","typeInfo","icon","winningRate")
+		}
+
+		if err != nil {
+			o.Rollback()
+			return
+		}
+	}
+
+	play := m.PlayConfigs
+	for k, v := range play {
+		if v.Id == 0 { //新增
+			v.DrawId = m.Id
+			v.Play = k + 1
+			_, err = o.Insert(v)
+		}else {  //修改
+			_, err = o.Update(v,"startTime","endTime")
+		}
+		if err != nil {
+			o.Rollback()
+			return
+		}
+
+	}
+	o.Commit()
+	return
+}
+
+func (m *Draw) Read(fields ...string) (err error) {
+	err = orm.NewOrm().Read(m, fields...)
+	return
+}
+
+func(m *Draw) Query() orm.QuerySeter {
+	return orm.NewOrm().QueryTable(m)
+}
+
+func(m *Draw) Insert() (id int64, err error) {
+	m.CreateTime = lib.GetCurrentTimeStamp()
+	o := orm.NewOrm()
+	o.Using("default")
+	o.Begin()
+	id, err = o.Insert(m)
+	if err != nil {
+		o.Rollback()
+		return
+	}
+
+	prize := m.PrizeConfigs
+	for k, _ := range prize {
+		prize[k].DrawId = id
+		prize[k].CreateTime = lib.GetCurrentTimeStamp()
+		prize[k].UpdateTime = lib.GetCurrentTimeStamp()
+	}
+	length := len(prize)
+	_, err = o.InsertMulti(length, prize)
+	if err != nil {
+		o.Rollback()
+	}
+	play := m.PlayConfigs
+	for k, _ := range play {
+		play[k].DrawId = id
+		play[k].Play = k + 1
+	}
+	length = len(play)
+	_, err = o.InsertMulti(length, play)
+	if err != nil {
+		o.Rollback()
+	}
+	o.Commit()
+	return
 }
 
 // DeleteDraw deletes Draw by Id and returns error if
