# models/drawPlay.go
@@ -1,8 +1,6 @@
 package models
 
-import (
-	"github.com/astaxie/beego/orm"
-)
+import "github.com/astaxie/beego/orm"
 
 type DrawPlay struct {
 	Id          int64  `json:"id,omitempty" orm:"auto"`
@@ -11,21 +9,23 @@ type DrawPlay struct {
 	Deleted     int    `json:"deleted,omitempty" orm:"column(deleted)"`
 	StartTime   int64  `json:"startTime" orm:"column(startTime)"`
 	EndTime     int64  `json:"endTime" orm:"column(endTime)"`
+	//Draw		*Draw `orm:"rel(fk)"`
 }
 
 func (d *DrawPlay) TableName() string {
 	return "program_activity_draw_play"
 }
 
-func AddDrawPlay(play []DrawPlay, id int64) (num int64, err error) {
-	o := orm.NewOrm()
-	o.Using("default")
-	for k, _ := range play {
-		play[k].DrawId = id
-		play[k].Play = k + 1
-	}
-	length := len(play)
-	num, _ = o.InsertMulti(length, play)
+func (m *DrawPlay) Update(fields ...string) (err error) {
+	_, err = orm.NewOrm().Update(m, fields...)
 	return
 }
 
+func (m *DrawPlay) Read(fields ...string) (err error) {
+	err = orm.NewOrm().Read(m, fields...)
+	return
+}
+
+func(m *DrawPlay) Query() orm.QuerySeter {
+	return orm.NewOrm().QueryTable(m)
+}
