# swagger/swagger.yml
@@ -11,7 +11,96 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /draw/:
+  /draw/{id}:
+    delete:
+      tags:
+      - draw
+      description: delete the Draw
+      operationId: DrawController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
+  /draw/Edit:
+    put:
+      tags:
+      - draw
+      description: update the Draw
+      operationId: DrawController.Put
+      parameters:
+      - in: formData
+        name: id
+        description: The id you want to update
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: title
+        description: body for Draw content
+        required: true
+        type: string
+      - in: formData
+        name: intro
+        description: body for Draw content
+        required: true
+        type: string
+      - in: formData
+        name: type
+        description: body for Draw content
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: times
+        description: body for Draw content
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: showResult
+        description: body for Draw content
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: showRate
+        description: body for Draw content
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: showType
+        description: body for Draw content
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: condition
+        description: body for Draw content
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: joinNum
+        description: body for Draw content
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Draw'
+        "403":
+          description: :id is not int
+  /draw/GetAll:
     get:
       tags:
       - draw
@@ -52,12 +141,41 @@ paths:
             $ref: '#/definitions/models.Draw'
         "403":
           description: ""
+  /draw/Login:
+    post:
+      tags:
+      - draw
+      description: delete the Draw
+      operationId: DrawController.Login
+      parameters:
+      - in: formData
+        name: phone
+        description: The id you want to delete
+        required: true
+        type: integer
+        format: int64
+      - in: formData
+        name: password
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string}'
+        "403":
+          description: id is empty
+  /draw/SaveConfig:
     post:
       tags:
       - draw
       description: create Draw
       operationId: DrawController.Create
       parameters:
+      - in: formData
+        name: id
+        description: body for Draw content
+        type: integer
+        format: int64
       - in: formData
         name: title
         description: body for Draw content
@@ -66,40 +184,48 @@ paths:
       - in: formData
         name: intro
         description: body for Draw content
+        required: true
         type: string
       - in: formData
         name: type
         description: body for Draw content
+        required: true
         type: integer
         format: int64
       - in: formData
         name: times
         description: body for Draw content
+        required: true
         type: integer
         format: int64
       - in: formData
         name: showResult
         description: body for Draw content
+        required: true
         type: integer
         format: int64
       - in: formData
         name: showRate
         description: body for Draw content
+        required: true
         type: integer
         format: int64
       - in: formData
         name: showType
         description: body for Draw content
+        required: true
         type: integer
         format: int64
       - in: formData
         name: condition
         description: body for Draw content
+        required: true
         type: integer
         format: int64
       - in: formData
         name: joinNum
         description: body for Draw content
+        required: true
         type: integer
         format: int64
       - in: formData
@@ -117,14 +243,19 @@ paths:
             $ref: '#/definitions/models.Draw'
         "403":
           description: body is empty
-  /draw/{id}:
+  /draw/getInfo:
     get:
       tags:
       - draw
       description: get Draw by id
       operationId: DrawController.GetOne
       parameters:
-      - in: path
+      - in: header
+        name: token
+        description: The key for staticblock
+        required: true
+        type: string
+      - in: query
         name: id
         description: The key for staticblock
         required: true
@@ -137,47 +268,6 @@ paths:
             $ref: '#/definitions/models.Draw'
         "403":
           description: :id is empty
-    put:
-      tags:
-      - draw
-      description: update the Draw
-      operationId: DrawController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: integer
-        format: int64
-      - in: body
-        name: body
-        description: body for Draw content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Draw'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Draw'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - draw
-      description: delete the Draw
-      operationId: DrawController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
 definitions:
   models.Draw:
     title: Draw
@@ -209,6 +299,16 @@ definitions:
       nowPlay:
         type: integer
         format: int64
+      playConfigs:
+        type: array
+        items:
+          $ref: '#/definitions/models.DrawPlay'
+      previewUrl:
+        type: string
+      prizeConfigs:
+        type: array
+        items:
+          $ref: '#/definitions/models.DrawPrize'
       showRate:
         type: integer
         format: int64
@@ -236,6 +336,67 @@ definitions:
         type: integer
         format: int64
       uin:
+        type: integer
+        format: int64
+  models.DrawPlay:
+    title: DrawPlay
+    type: object
+    properties:
+      deleted:
+        type: integer
+        format: int64
+      drawId:
+        type: integer
+        format: int64
+      endTime:
+        type: integer
+        format: int64
+      id:
+        type: integer
+        format: int64
+      play:
+        type: integer
+        format: int64
+      startTime:
+        type: integer
+        format: int64
+  models.DrawPrize:
+    title: DrawPrize
+    type: object
+    properties:
+      createTime:
+        type: integer
+        format: int64
+      deleted:
+        type: integer
+        format: int64
+      drawId:
+        type: integer
+        format: int64
+      icon:
+        type: string
+      id:
+        type: integer
+        format: int64
+      level:
+        type: integer
+        format: int64
+      name:
+        type: string
+      num:
+        type: integer
+        format: int64
+      prizeAlias:
+        type: string
+      sum:
+        type: integer
+        format: int64
+      type:
+        type: integer
+        format: int64
+      typeInfo:
+        type: string
+      winningRate:
         type: integer
         format: int64
 tags:
